Add additional index.ipynb updating functionality.

--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -46,6 +46,7 @@
     "from cjm_nbdev_overview.core import *\n",
     "from cjm_nbdev_overview.parsers import *\n",
     "from cjm_nbdev_overview.tree import *\n",
+    "from cjm_nbdev_overview.dependencies import *\n",
     "from dataclasses import dataclass\n",
     "import textwrap\n",
     "\n",
@@ -70,7 +71,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def format_function_doc(func: FunctionInfo,             # Function information\n",
+    "def format_function_doc(func: FunctionInfo,             # Function informationFor the `add_cli_reference_section` function, remember that while we are using this project's functionality on itself, it is meant to be used on other nbdev projects as well. Therefore, we should first check the project's `settings.ini` file to see if the `console_scripts` value has anything, we can do that with `cfg = get_config(); cfg.console_scripts` (e.g., 'nbdev-overview=cjm_nbdev_overview.cli:main'). I believe we should then be able to use that to get the CLI reference info. Rather than hardcoding the CLI reference, we should programmatically generate it to account for changes.  \n",
     "                       indent: str = \"\"                 # Indentation prefix\n",
     "                       ) -> str:                        # Formatted documentation\n",
     "    \"Format a function with its signature for documentation\"\n",
@@ -366,7 +367,10 @@
     "    module_cells.append(header_cell)\n",
     "    \n",
     "    # Sort notebooks by their numeric prefix if they have one\n",
-    "    def sort_key(nb_path):\n",
+    "    def sort_key(\n",
+    "        nb_path  # TODO: Add type hint and description\n",
+    "    ): # TODO: Add type hint\n",
+    "        \"TODO: Add function description\"\n",
     "        match = re.match(r'^(\\d+)', nb_path.stem)\n",
     "        if match:\n",
     "            return (int(match.group(1)), nb_path.stem)\n",
@@ -417,6 +421,344 @@
     "\n",
     "# Or specify a custom path:\n",
     "# update_index_module_docs(Path(\"../other_project/nbs/index.ipynb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "919ycnl7dml",
+   "metadata": {},
+   "source": [
+    "## Comprehensive Index Update Functions\n",
+    "\n",
+    "Additional functions to update index.ipynb with project structure, dependencies, CLI reference, and statistics:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "lvuplsalgwr",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def add_project_structure_section(index_path: Path = None,      # Path to index.ipynb\n",
+    "                                 marker: str = \"## Project Structure\"  # Section marker\n",
+    "                                 ) -> str:                       # Generated structure content\n",
+    "    \"Generate project structure tree content for index.ipynb\"\n",
+    "    if index_path is None:\n",
+    "        cfg = get_config()\n",
+    "        path = cfg.nbs_path\n",
+    "    else:\n",
+    "        path = index_path.parent\n",
+    "    \n",
+    "    # Generate tree with descriptions\n",
+    "    tree_content = generate_tree_with_descriptions(path)\n",
+    "    \n",
+    "    # Get summary statistics\n",
+    "    summary = get_tree_summary(path)\n",
+    "    \n",
+    "    # Create the complete section\n",
+    "    content = f\"{marker}\\n\\n\"\n",
+    "    content += \"```\\n\"\n",
+    "    content += tree_content\n",
+    "    content += \"\\n```\\n\\n\"\n",
+    "    content += summary\n",
+    "    \n",
+    "    return content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "zedc6cimhtj",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def add_dependencies_section(index_path: Path = None,           # Path to index.ipynb\n",
+    "                           marker: str = \"## Module Dependencies\", # Section marker\n",
+    "                           direction: str = \"LR\"                # Diagram direction\n",
+    "                           ) -> str:                            # Generated dependencies content\n",
+    "    \"Generate module dependencies diagram content for index.ipynb\"\n",
+    "    if index_path is None:\n",
+    "        cfg = get_config()\n",
+    "        path = cfg.nbs_path\n",
+    "    else:\n",
+    "        path = index_path.parent\n",
+    "    \n",
+    "    # Build dependency graph\n",
+    "    graph = build_dependency_graph(path)\n",
+    "    \n",
+    "    # Generate Mermaid diagram\n",
+    "    diagram = generate_mermaid_diagram(graph, direction=direction)\n",
+    "    \n",
+    "    # Create the complete section\n",
+    "    content = f\"{marker}\\n\\n\"\n",
+    "    content += diagram  # diagram already includes ```mermaid wrapper\n",
+    "    content += \"\\n\\n\"\n",
+    "    \n",
+    "    # Add dependency matrix if there are dependencies\n",
+    "    if graph.dependencies:\n",
+    "        # Comment out the dependency matrix for now due to Markdown rendering issues\n",
+    "        # content += \"### Dependency Matrix\\n\\n\"\n",
+    "        # content += generate_dependency_matrix(graph)\n",
+    "        content += f\"*{len(graph.dependencies)} cross-module dependencies detected*\"\n",
+    "    else:\n",
+    "        content += \"No cross-module dependencies detected.\"\n",
+    "    \n",
+    "    return content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57i7txkdqvm",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "import subprocess\n",
+    "import importlib.util\n",
+    "import argparse\n",
+    "from typing import Optional\n",
+    "\n",
+    "def add_cli_reference_section(marker: str = \"## CLI Reference\"  # Section marker\n",
+    "                            ) -> str:                           # Generated CLI content\n",
+    "    \"Generate CLI reference content for index.ipynb based on project's console scripts\"\n",
+    "    \n",
+    "    cfg = get_config()\n",
+    "    \n",
+    "    # Check if project has console scripts\n",
+    "    console_scripts = getattr(cfg, 'console_scripts', None)\n",
+    "    if not console_scripts:\n",
+    "        return f\"{marker}\\n\\nNo CLI commands found in this project.\"\n",
+    "    \n",
+    "    content = f\"{marker}\\n\\n\"\n",
+    "    \n",
+    "    # Parse console scripts to find CLI commands\n",
+    "    cli_commands = []\n",
+    "    if console_scripts:\n",
+    "        for script in console_scripts.split():\n",
+    "            if '=' in script:\n",
+    "                script_name, module_path = script.split('=', 1)\n",
+    "                cli_commands.append((script_name, module_path))\n",
+    "    \n",
+    "    if not cli_commands:\n",
+    "        return f\"{marker}\\n\\nNo CLI commands found in this project.\"\n",
+    "    \n",
+    "    # Generate documentation for each CLI command\n",
+    "    for script_name, module_path in cli_commands:\n",
+    "        content += f\"### `{script_name}` Command\\n\\n\"\n",
+    "        \n",
+    "        try:\n",
+    "            # Try to get help text by running the command\n",
+    "            result = subprocess.run([script_name, '--help'], \n",
+    "                                  capture_output=True, text=True, timeout=10)\n",
+    "            if result.returncode == 0:\n",
+    "                # Parse the help output to extract commands\n",
+    "                help_text = result.stdout\n",
+    "                content += \"```\\n\"\n",
+    "                content += help_text\n",
+    "                content += \"\\n```\\n\\n\"\n",
+    "                \n",
+    "                # Extract subcommands if they exist\n",
+    "                if 'Available commands:' in help_text or 'subcommands:' in help_text.lower():\n",
+    "                    content += f\"#### Usage Examples\\n\\n\"\n",
+    "                    content += \"```bash\\n\"\n",
+    "                    \n",
+    "                    # Extract command names from help text\n",
+    "                    lines = help_text.split('\\n')\n",
+    "                    in_commands_section = False\n",
+    "                    \n",
+    "                    for line in lines:\n",
+    "                        if 'available commands' in line.lower() or 'subcommands' in line.lower():\n",
+    "                            in_commands_section = True\n",
+    "                            continue\n",
+    "                        elif in_commands_section and line.strip():\n",
+    "                            # Look for command names (typically the first word after whitespace)\n",
+    "                            parts = line.strip().split()\n",
+    "                            if parts and not parts[0].startswith('-'):\n",
+    "                                cmd = parts[0]\n",
+    "                                if cmd not in ['usage:', 'positional', 'optional', 'options:']:\n",
+    "                                    content += f\"# {parts[1:] if len(parts) > 1 else ['Command description']}\\n\"\n",
+    "                                    content += f\"{script_name} {cmd}\\n\\n\"\n",
+    "                        elif in_commands_section and not line.strip():\n",
+    "                            break\n",
+    "                    \n",
+    "                    content += \"```\\n\\n\"\n",
+    "            else:\n",
+    "                content += f\"CLI command `{script_name}` found but help text unavailable.\\n\\n\"\n",
+    "                \n",
+    "        except (subprocess.TimeoutExpired, subprocess.CalledProcessError, FileNotFoundError):\n",
+    "            content += f\"CLI command `{script_name}` found but help text unavailable.\\n\\n\"\n",
+    "    \n",
+    "    content += f\"For detailed help on any command, use `{cli_commands[0][0]} <command> --help`.\"\n",
+    "    \n",
+    "    return content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "o0kdzl54p09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def update_index_comprehensive(index_path: Path = None,         # Path to index.ipynb\n",
+    "                              include_structure: bool = True,  # Include project structure\n",
+    "                              include_dependencies: bool = True, # Include module dependencies\n",
+    "                              include_cli: bool = True,         # Include CLI reference\n",
+    "                              include_modules: bool = True      # Include module documentation\n",
+    "                              ) -> None:                        # Updates index.ipynb in place\n",
+    "    \"Comprehensively update index.ipynb with project structure, dependencies, CLI, and modules\"\n",
+    "    if index_path is None:\n",
+    "        cfg = get_config()\n",
+    "        index_path = cfg.nbs_path / \"index.ipynb\"\n",
+    "    \n",
+    "    # Read the existing notebook\n",
+    "    nb = read_nb(index_path)\n",
+    "    \n",
+    "    # Define all section markers we want to manage\n",
+    "    section_markers = []\n",
+    "    if include_structure:\n",
+    "        section_markers.append(\"## Project Structure\")\n",
+    "    if include_dependencies:\n",
+    "        section_markers.append(\"## Module Dependencies\") \n",
+    "    if include_cli:\n",
+    "        section_markers.append(\"## CLI Reference\")\n",
+    "    if include_modules:\n",
+    "        section_markers.append(\"## Module Overview\")\n",
+    "    \n",
+    "    # Remove all existing managed sections\n",
+    "    cells_to_keep = []\n",
+    "    skip_until_next_section = False\n",
+    "    current_skipping_marker = None\n",
+    "    \n",
+    "    for i, cell in enumerate(nb.cells):\n",
+    "        if cell.cell_type == 'markdown':\n",
+    "            source = cell.source.strip()\n",
+    "            \n",
+    "            # Check if this starts any of our managed sections\n",
+    "            section_found = None\n",
+    "            for marker in section_markers:\n",
+    "                if source.startswith(marker):\n",
+    "                    section_found = marker\n",
+    "                    break\n",
+    "            \n",
+    "            if section_found:\n",
+    "                skip_until_next_section = True\n",
+    "                current_skipping_marker = section_found\n",
+    "                continue\n",
+    "            # Check if we've reached a new top-level section (## but not ### or more)\n",
+    "            elif skip_until_next_section and re.match(r'^##\\s+(?!#)', source):\n",
+    "                # Make sure it's not another one of our managed sections\n",
+    "                if not any(source.startswith(marker) for marker in section_markers):\n",
+    "                    skip_until_next_section = False\n",
+    "                    current_skipping_marker = None\n",
+    "        \n",
+    "        # Keep the cell if we're not in a managed section\n",
+    "        if not skip_until_next_section:\n",
+    "            cells_to_keep.append(cell)\n",
+    "    \n",
+    "    # Generate new content sections\n",
+    "    new_sections = []\n",
+    "    \n",
+    "    if include_structure:\n",
+    "        try:\n",
+    "            structure_content = add_project_structure_section(index_path)\n",
+    "            structure_cell = mk_cell(structure_content, cell_type='markdown')\n",
+    "            new_sections.append(structure_cell)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error generating project structure: {e}\")\n",
+    "    \n",
+    "    if include_dependencies:\n",
+    "        try:\n",
+    "            deps_content = add_dependencies_section(index_path)\n",
+    "            deps_cell = mk_cell(deps_content, cell_type='markdown')\n",
+    "            new_sections.append(deps_cell)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error generating dependencies: {e}\")\n",
+    "    \n",
+    "    if include_cli:\n",
+    "        try:\n",
+    "            cli_content = add_cli_reference_section()\n",
+    "            cli_cell = mk_cell(cli_content, cell_type='markdown')\n",
+    "            new_sections.append(cli_cell)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error generating CLI reference: {e}\")\n",
+    "    \n",
+    "    if include_modules:\n",
+    "        try:\n",
+    "            # Generate module overview sections\n",
+    "            notebooks = get_notebook_files(index_path.parent, recursive=True)\n",
+    "            \n",
+    "            # Create the module overview header cell\n",
+    "            header_cell = mk_cell(\"## Module Overview\\n\\nDetailed documentation for each module in the project:\", \n",
+    "                                 cell_type='markdown')\n",
+    "            new_sections.append(header_cell)\n",
+    "            \n",
+    "            # Sort notebooks by their numeric prefix\n",
+    "            def sort_key(\n",
+    "                nb_path  # TODO: Add type hint and description\n",
+    "            ): # TODO: Add type hint\n",
+    "                \"TODO: Add function description\"\n",
+    "                match = re.match(r'^(\\d+)', nb_path.stem)\n",
+    "                if match:\n",
+    "                    return (int(match.group(1)), nb_path.stem)\n",
+    "                return (999, nb_path.stem)\n",
+    "            \n",
+    "            sorted_notebooks = sorted(notebooks, key=sort_key)\n",
+    "            \n",
+    "            # Generate overview for each module\n",
+    "            for nb_path in sorted_notebooks:\n",
+    "                if nb_path.stem in ['index', '00_index']:\n",
+    "                    continue\n",
+    "                    \n",
+    "                try:\n",
+    "                    module_info = parse_notebook(nb_path)\n",
+    "                    \n",
+    "                    # Only include if it has exported content\n",
+    "                    has_exports = any([\n",
+    "                        any(f.is_exported for f in module_info.functions),\n",
+    "                        any(c.is_exported for c in module_info.classes),\n",
+    "                        any(v.is_exported for v in module_info.variables)\n",
+    "                    ])\n",
+    "                    \n",
+    "                    if has_exports:\n",
+    "                        overview_md = generate_module_overview(module_info)\n",
+    "                        overview_cell = mk_cell(overview_md, cell_type='markdown')\n",
+    "                        new_sections.append(overview_cell)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error parsing {nb_path}: {e}\")\n",
+    "                    continue\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error generating module documentation: {e}\")\n",
+    "    \n",
+    "    # Rebuild the notebook with new sections at the end\n",
+    "    nb.cells = cells_to_keep + new_sections\n",
+    "    \n",
+    "    # Write the updated notebook\n",
+    "    write_nb(nb, index_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mc734gmhfzo",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Update index.ipynb with comprehensive documentation\n",
+    "# update_index_comprehensive()  # Full update with all sections\n",
+    "\n",
+    "# Or customize what sections to include:\n",
+    "# update_index_comprehensive(\n",
+    "#     include_structure=True,     # Project tree\n",
+    "#     include_dependencies=True,  # Module dependencies \n",
+    "#     include_cli=True,          # CLI reference\n",
+    "#     include_modules=True       # Module documentation\n",
+    "# )"
    ]
   },
   {
@@ -579,22 +921,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "00796b76-98ad-43c0-8c12-3274fc47d70e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0543d9d-d3af-49b5-a0f1-976196a9acc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6eb1860-3ae4-4564-b58e-ca195434f0ce",
    "metadata": {},
    "outputs": [],
    "source": []
