--- a/nbs/06_cli.ipynb
+++ b/nbs/06_cli.ipynb
@@ -338,6 +338,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "449zkcbzcxz",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def update_comprehensive_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
+    "    \"Comprehensively update index.ipynb with all sections\"\n",
+    "    # Get index path\n",
+    "    index_path = Path(args.index) if args.index else None\n",
+    "    \n",
+    "    try:\n",
+    "        update_index_comprehensive(\n",
+    "            index_path=index_path,\n",
+    "            include_structure=not args.no_structure,\n",
+    "            include_dependencies=not args.no_dependencies,\n",
+    "            include_cli=not args.no_cli,\n",
+    "            include_modules=not args.no_modules\n",
+    "        )\n",
+    "        \n",
+    "        # Get the actual path that was updated\n",
+    "        if index_path is None:\n",
+    "            cfg = get_config()\n",
+    "            index_path = cfg.nbs_path / \"index.ipynb\"\n",
+    "        \n",
+    "        sections = []\n",
+    "        if not args.no_structure:\n",
+    "            sections.append(\"project structure\")\n",
+    "        if not args.no_dependencies:\n",
+    "            sections.append(\"module dependencies\")\n",
+    "        if not args.no_cli:\n",
+    "            sections.append(\"CLI reference\")\n",
+    "        if not args.no_modules:\n",
+    "            sections.append(\"module documentation\")\n",
+    "        \n",
+    "        sections_str = \", \".join(sections)\n",
+    "        print(f\"Successfully updated {index_path} with {sections_str}\")\n",
+    "        \n",
+    "        if args.commit:\n",
+    "            # Stage and commit the changes\n",
+    "            import subprocess\n",
+    "            try:\n",
+    "                subprocess.run(['git', 'add', str(index_path)], check=True)\n",
+    "                subprocess.run(['git', 'commit', '-m', 'Comprehensive update of index.ipynb documentation'], check=True)\n",
+    "                print(\"Changes committed to git\")\n",
+    "            except subprocess.CalledProcessError as e:\n",
+    "                print(f\"Git operations failed: {e}\", file=sys.stderr)\n",
+    "                sys.exit(1)\n",
+    "                \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error updating index: {e}\", file=sys.stderr)\n",
+    "        sys.exit(1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e464ac76-1676-4f77-a7b2-c128a0b9c32a",
    "metadata": {},
@@ -405,6 +463,16 @@
     "    update_parser.add_argument('--index', help='Path to index.ipynb (defaults to nbs/index.ipynb)')\n",
     "    update_parser.add_argument('--commit', action='store_true', help='Commit changes to git')\n",
     "    update_parser.set_defaults(func=update_index_cmd)\n",
+    "    \n",
+    "    # Update comprehensive command\n",
+    "    comprehensive_parser = subparsers.add_parser('update-comprehensive', help='Comprehensive update of index.ipynb with all sections')\n",
+    "    comprehensive_parser.add_argument('--index', help='Path to index.ipynb (defaults to nbs/index.ipynb)')\n",
+    "    comprehensive_parser.add_argument('--no-structure', action='store_true', help='Skip project structure section')\n",
+    "    comprehensive_parser.add_argument('--no-dependencies', action='store_true', help='Skip module dependencies section')\n",
+    "    comprehensive_parser.add_argument('--no-cli', action='store_true', help='Skip CLI reference section')\n",
+    "    comprehensive_parser.add_argument('--no-modules', action='store_true', help='Skip module documentation section')\n",
+    "    comprehensive_parser.add_argument('--commit', action='store_true', help='Commit changes to git')\n",
+    "    comprehensive_parser.set_defaults(func=update_comprehensive_cmd)\n",
     "    \n",
     "    # Parse arguments\n",
     "    args = parser.parse_args()\n",
