--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -177,6 +177,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Project Structure\n",
+    "\n",
+    "```\n",
+    "nbs/\n",
+    "├── 00_core.ipynb            # Core utilities and data models for nbdev project overview generation\n",
+    "├── 01_parsers.ipynb         # Parse notebook metadata, content, and extract function/class signatures with docments\n",
+    "├── 02_tree.ipynb            # Generate tree visualizations for nbdev project structure\n",
+    "├── 03_api_docs.ipynb        # Generate module overviews with formatted signatures for nbdev projects\n",
+    "├── 04_dependencies.ipynb    # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
+    "├── 05_generators.ipynb      # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
+    "├── 06_cli.ipynb             # CLI commands for nbdev project overview generation and analysis\n",
+    "└── index.ipynb              # Generate comprehensive overviews, API references, and project structure visualizations for nbdev projects to enhance developer and AI assistant understanding.\n",
+    "```\n",
+    "\n",
+    "Total: 8 notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module Dependencies\n",
+    "\n",
+    "```mermaid\n",
+    "graph LR\n",
+    "    core[core<br/>Core Utilities]\n",
+    "    parsers[parsers<br/>Notebook and Module Parsing]\n",
+    "    tree[tree<br/>Directory Tree Visualization]\n",
+    "    api_docs[api_docs<br/>API Documentation Generation]\n",
+    "    dependencies[dependencies<br/>Dependency Analysis and Visualization]\n",
+    "    generators[generators<br/>Auto-generation Utilities]\n",
+    "    cli[cli<br/>Command-Line Interface]\n",
+    "\n",
+    "    parsers --> core\n",
+    "    parsers --> tree\n",
+    "    tree --> core\n",
+    "    api_docs --> parsers\n",
+    "    api_docs --> core\n",
+    "    api_docs --> tree\n",
+    "    api_docs --> dependencies\n",
+    "    dependencies --> core\n",
+    "    dependencies --> parsers\n",
+    "    generators --> core\n",
+    "    generators --> tree\n",
+    "    cli --> tree\n",
+    "    cli --> dependencies\n",
+    "    cli --> api_docs\n",
+    "    cli --> parsers\n",
+    "\n",
+    "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
+    "```\n",
+    "\n",
+    "*15 cross-module dependencies detected*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CLI Reference\n",
+    "\n",
+    "### `nbdev-overview` Command\n",
+    "\n",
+    "```\n",
+    "usage: nbdev-overview [-h]\n",
+    "                      {tree,api,deps,overview,update-index,update-comprehensive}\n",
+    "                      ...\n",
+    "\n",
+    "Generate comprehensive overviews for nbdev projects\n",
+    "\n",
+    "positional arguments:\n",
+    "  {tree,api,deps,overview,update-index,update-comprehensive}\n",
+    "                        Available commands\n",
+    "    tree                Generate directory tree visualization\n",
+    "    api                 Generate API documentation\n",
+    "    deps                Analyze module dependencies\n",
+    "    overview            Generate complete project overview\n",
+    "    update-index        Update index.ipynb with module documentation\n",
+    "    update-comprehensive\n",
+    "                        Comprehensive update of index.ipynb with all sections\n",
+    "\n",
+    "options:\n",
+    "  -h, --help            show this help message and exit\n",
+    "\n",
+    "```\n",
+    "\n",
+    "For detailed help on any command, use `nbdev-overview <command> --help`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Module Overview\n",
     "\n",
     "Detailed documentation for each module in the project:"
@@ -410,7 +503,7 @@
     "#### Functions\n",
     "\n",
     "```python\n",
-    "def format_function_doc(func: FunctionInfo,             # Function information\n",
+    "def format_function_doc(func: FunctionInfo,             # Function informationFor the `add_cli_reference_section` function, remember that while we are using this project's functionality on itself, it is meant to be used on other nbdev projects as well. Therefore, we should first check the project's `settings.ini` file to see if the `console_scripts` value has anything, we can do that with `cfg = get_config(); cfg.console_scripts` (e.g., 'nbdev-overview=cjm_nbdev_overview.cli:main'). I believe we should then be able to use that to get the CLI reference info. Rather than hardcoding the CLI reference, we should programmatically generate it to account for changes.  \n",
     "                       indent: str = \"\"                 # Indentation prefix\n",
     "                       ) -> str:                        # Formatted documentation\n",
     "    \"Format a function with its signature for documentation\"\n",
@@ -447,6 +540,37 @@
     "                           start_marker: str = \"## Module Overview\",  # Marker to identify module docs section\n",
     "                           ) -> None:                    # Updates index.ipynb in place\n",
     "    \"Update the module documentation section in index.ipynb\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def add_project_structure_section(index_path: Path = None,      # Path to index.ipynb\n",
+    "                                 marker: str = \"## Project Structure\"  # Section marker\n",
+    "                                 ) -> str:                       # Generated structure content\n",
+    "    \"Generate project structure tree content for index.ipynb\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def add_dependencies_section(index_path: Path = None,           # Path to index.ipynb\n",
+    "                           marker: str = \"## Module Dependencies\", # Section marker\n",
+    "                           direction: str = \"LR\"                # Diagram direction\n",
+    "                           ) -> str:                            # Generated dependencies content\n",
+    "    \"Generate module dependencies diagram content for index.ipynb\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def add_cli_reference_section(marker: str = \"## CLI Reference\"  # Section marker\n",
+    "                            ) -> str:                           # Generated CLI content\n",
+    "    \"Generate CLI reference content for index.ipynb based on project's console scripts\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def update_index_comprehensive(index_path: Path = None,         # Path to index.ipynb\n",
+    "                              include_structure: bool = True,  # Include project structure\n",
+    "                              include_dependencies: bool = True, # Include module dependencies\n",
+    "                              include_cli: bool = True,         # Include CLI reference\n",
+    "                              include_modules: bool = True      # Include module documentation\n",
+    "                              ) -> None:                        # Updates index.ipynb in place\n",
+    "    \"Comprehensively update index.ipynb with project structure, dependencies, CLI, and modules\"\n",
     "```\n"
    ]
   },
@@ -613,6 +737,13 @@
     "    args  # TODO: Add type hint and description\n",
     "): # Command line arguments - TODO: Add type hint\n",
     "    \"Update index.ipynb with module documentation\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def update_comprehensive_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
+    "    \"Comprehensively update index.ipynb with all sections\"\n",
     "```\n",
     "\n",
     "```python\n",
